finde pruebas github  ,se puede pasar a trabajar en el proyecto final en otro repositorio

--- a/index.html
+++ b/index.html
@@ -14,3 +14,6 @@
 
 
 <p>confirmacion del pull notebook a pc trabajo , trabajo notebook</p>
+
+
+<p>luego de estas pruebas se puede continuar con el repositorio real para el final </p>
