confirmacion de pull  de ambas pcs

--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@
 <p>parrafo 4 desde notebook para controlar pc trabajo</p>
 
 <p>parrafo 5</p>
+
+
+<p>confirmacion del pull notebook a pc trabajo , trabajo notebook</p>
